--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -14,29 +14,28 @@
   ~ limitations under the License.
   -->
 
-<nb-card class="entities">
-  <nb-card-header>All Entity Types</nb-card-header>
+<h1 class="mt-3">Entities</h1>
+
+<nb-card>
+  <nb-card-header>Entity types</nb-card-header>
   <nb-card-body>
     <div
       class="tag"
-      *ngFor="let e of state.entityTypesSortedByName() | async"
-      [class.primary]="e.dictionary"
+      *ngFor="let e of entityTypesSortedByName() | async"
+      [class.duckling]="e.namespace() !== state.currentApplication.namespace"
+      [class.pointer]="e.namespace() === state.currentApplication.namespace"
+      [class.info]="e.dictionary"
       [class.success]="e === selectedEntityType"
       (click)="selectEntityType(e)"
     >
       {{ e.nameWithoutNamespace(state.currentApplication.namespace) }}
       <nb-icon
-        *ngIf="e.namespace() === state.currentApplication.namespace && !e.dictionary"
+        *ngIf="e.namespace() === state.currentApplication.namespace"
         class="pointer ml-1"
-        nbTooltip="add predefined values"
+        nbTooltip="Edit entity"
         icon="edit-outline"
       ></nb-icon>
-      <nb-icon
-        *ngIf="e.namespace() === state.currentApplication.namespace && e.dictionary"
-        class="pointer ml-1"
-        nbTooltip="update predefined values"
-        icon="edit-outline"
-      ></nb-icon>
+
       <nb-icon
         *ngIf="e.namespace() === state.currentApplication.namespace"
         class="pointer ml-1"
@@ -46,183 +45,223 @@
         (click)="deleteEntityType(e)"
       ></nb-icon>
     </div>
-  </nb-card-body>
-</nb-card>
-<nb-card
-  class="entities"
-  *ngIf="!!selectedEntityType"
->
-  <nb-card-header>Configuration for {{ selectedEntityType.name }}</nb-card-header>
-  <nb-card-body>
-    <nb-checkbox
-      [(ngModel)]="selectedEntityType.obfuscated"
-      (checkedChange)="updateEntityType()"
-      nbTooltip="If selected all values are obfuscated in Tock Studio"
-      >Obfuscated</nb-checkbox
+
+    <nb-card
+      class="mt-3"
+      *ngIf="!!selectedEntityType"
     >
-  </nb-card-body>
-</nb-card>
-
-<nb-card *ngIf="!!selectedDictionary">
-  <nb-card-header>Predefined values for {{ selectedEntityType.name }}</nb-card-header>
-  <nb-card-body>
-    <div>
-      <div class="d-flex">
-        <nb-checkbox
-          [(ngModel)]="selectedDictionary.onlyValues"
-          (checkedChange)="updateDictionary()"
-          nbTooltip="If selected, no model is used: only exact values are recognized/evaluated"
-          >No Model</nb-checkbox
+      <nb-card-header class="d-flex justify-content-between">
+        Configuration for {{ selectedEntityType.name }}
+        <button
+          nbButton
+          shape="round"
+          ghost
+          (click)="unSelectEntityType()"
+          nbTooltip="Unselect entity"
         >
+          <nb-icon icon="close-outline"></nb-icon>
+        </button>
+      </nb-card-header>
 
+      <nb-card-body class="mt-2">
+        <nb-checkbox
+          [checked]="selectedEntityType.obfuscated"
+          (checkedChange)="selectedEntityType.obfuscated = !selectedEntityType.obfuscated; updateEntityType()"
+          nbTooltip="If selected all values are obfuscated in Tock Studio"
+          >Obfuscate value in Tock Studio</nb-checkbox
+        >
         <div
-          *ngIf="!selectedDictionary.onlyValues"
-          class="ml-3"
+          class="mt-3"
+          *ngIf="!!selectedDictionary"
         >
-          <label>Model Limit</label>
-          <input
-            nbInput
-            type="number"
-            placeholder="Model Limit"
-            [(ngModel)]="selectedDictionary.minDistance"
-            min="0"
-            max="1"
-            fieldSize="tiny"
-            nbTooltip="Number between 0 and 1 - only probability above this value are evaluated"
-            (change)="updateDictionary()"
-          />
-        </div>
+          <b class="lead">Predefined values</b>
 
-        <nb-checkbox
-          class="ml-3"
-          [(ngModel)]="selectedDictionary.textSearch"
-          nbTooltip="If selected, all the values that contains the searched text are returned"
-          (checkedChange)="updateDictionary()"
-          >Full Text</nb-checkbox
-        >
-      </div>
+          <div class="mt-3">
+            <div class="d-flex flex-wrap gap-1 align-items-center">
+              <nb-checkbox
+                [checked]="selectedDictionary.onlyValues"
+                (checkedChange)="selectedDictionary.onlyValues = !selectedDictionary.onlyValues; updateDictionary()"
+                nbTooltip="If selected, no model is used: only exact values are recognized/evaluated"
+                >No Model</nb-checkbox
+              >
 
-      <div class="mt-2">
-        <button
-          nbButton
-          (click)="downloadDictionary()"
-          nbTooltip="Download Dictionary"
-        >
-          <nb-icon icon="download-outline"></nb-icon>
-          Download Dictionary
-        </button>
-        <button
-          nbButton
-          (click)="file.hidden = false; $event.srcElement.setAttribute('style', 'display:none')"
-          nbTooltip="Download Dictionary"
-          class="ml-3"
-        >
-          <nb-icon icon="upload-outline"></nb-icon>
-          Upload Dictionary
-        </button>
-        <input
-          #file
-          [hidden]="true"
-          id="file"
-          type="file"
-          ng2FileSelect
-          [uploader]="uploader"
-          class="ml-3"
-        />
-      </div>
+              <div
+                class="d-flex gap-1 align-items-center"
+                *ngIf="!selectedDictionary.onlyValues"
+              >
+                <small>Model Limit</small>
+                <input
+                  nbInput
+                  type="number"
+                  placeholder="Model Limit"
+                  [(ngModel)]="selectedDictionary.minDistance"
+                  min="0"
+                  max="1"
+                  fieldSize="tiny"
+                  nbTooltip="Number between 0 and 1 - only probability above this value are evaluated"
+                  (change)="updateDictionary()"
+                />
+              </div>
 
-      <div class="mt-4">
-        <label class="font-weight-bold">Add new predefined value</label>
-        <div>
-          <input
-            nbInput
-            placeholder="Add new predefined value"
-            #pv
-            (keyup.enter)="createPredefinedValue(pv.value); pv.value = ''"
-            fieldSize="small"
-          />
+              <nb-checkbox
+                [checked]="selectedDictionary.textSearch"
+                (checkedChange)="selectedDictionary.textSearch = !selectedDictionary.textSearch; updateDictionary()"
+                nbTooltip="If selected, all the values that contains the searched text are returned"
+                >Full Text</nb-checkbox
+              >
 
-          <button
-            nbButton
-            (click)="createPredefinedValue(pv.value)"
-            size="small"
-          >
-            <nb-icon icon="plus-outline"></nb-icon>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <table
-      class="values"
-      *ngIf="selectedDictionary.values.length !== 0"
-    >
-      <thead>
-        <th width="20%">Predefined Value</th>
-        <th width="50%">Allowed labels</th>
-        <th width="30%">Actions</th>
-      </thead>
-      <tbody>
-        <tr *ngFor="let predefinedValue of selectedDictionary.values">
-          <td>
-            <input
-              nbInput
-              #pv
-              [(value)]="predefinedValue.value"
-              (blur)="updatePredefinedValueName(predefinedValue, pv)"
-            />
-          </td>
-          <td>
-            <div
-              class="tag"
-              *ngFor="let label of predefinedValue.labels.get(state.currentLocale)"
-            >
-              {{ label }}
-              <nb-icon
-                icon="close-circle-outline"
-                (click)="deleteLabel(predefinedValue, label)"
-                class="ml-1"
-              ></nb-icon>
+              <div class="d-flex gap-1 align-items-center">
+                <button
+                  nbButton
+                  size="small"
+                  (click)="downloadDictionary()"
+                  nbTooltip="Download Dictionary"
+                >
+                  <nb-icon icon="download-outline"></nb-icon>
+                  Download Dictionary
+                </button>
+                <button
+                  nbButton
+                  size="small"
+                  (click)="file.hidden = false; $event.srcElement.setAttribute('style', 'display:none')"
+                  nbTooltip="Download Dictionary"
+                >
+                  <nb-icon icon="upload-outline"></nb-icon>
+                  Upload Dictionary
+                </button>
+                <input
+                  #file
+                  [hidden]="true"
+                  id="file"
+                  type="file"
+                  ng2FileSelect
+                  [uploader]="uploader"
+                />
+              </div>
             </div>
-          </td>
-          <td style="white-space: nowrap">
-            <input
-              nbInput
-              placeholder="Add label"
-              #l
-              (keyup.enter)="createLabel(predefinedValue, l.value)"
-            />
+          </div>
 
-            <button
-              nbButton
-              ghost
-              (click)="createLabel(predefinedValue, l.value)"
-              nbTooltip="Add Label"
-            >
-              <nb-icon icon="plus-outline"></nb-icon>
-            </button>
-            <button
-              nbButton
-              ghost
-              (click)="deletePredefinedValue(predefinedValue.value)"
-              status="warning"
-              nbTooltip="Delete predefined value"
-            >
-              <nb-icon icon="minus-outline"></nb-icon>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+          <table
+            class="table mt-3"
+            *ngIf="selectedDictionary.values.length !== 0"
+          >
+            <thead>
+              <th width="20%">Predefined Value</th>
+              <th width="50%">Allowed labels</th>
+              <th width="30%">Actions</th>
+            </thead>
+            <tbody>
+              <tr *ngFor="let predefinedValue of selectedDictionary.values">
+                <td>
+                  <input
+                    nbInput
+                    fieldSize="small"
+                    #predefValueEdit
+                    [(value)]="predefinedValue.value"
+                    (blur)="updatePredefinedValueName(predefinedValue, predefValueEdit)"
+                  />
+                </td>
+                <td>
+                  <div
+                    class="tag"
+                    *ngFor="let label of predefinedValue.labels.get(state.currentLocale)"
+                  >
+                    {{ label }}
+                    <nb-icon
+                      icon="close-circle-outline"
+                      (click)="deleteLabel(predefinedValue, label)"
+                      class="pointer ml-1"
+                      nbTooltip="Delete label"
+                    ></nb-icon>
+                  </div>
+                </td>
+                <td class="d-flex gap-1">
+                  <nb-form-field>
+                    <input
+                      nbInput
+                      fieldSize="small"
+                      placeholder="Add label"
+                      #addLabelInput
+                      (keyup.enter)="createLabel(predefinedValue, addLabelInput.value)"
+                    />
+                    <button
+                      nbButton
+                      ghost
+                      nbSuffix
+                      size="small"
+                      nbTooltip="Add Label"
+                      (click)="createLabel(predefinedValue, addLabelInput.value)"
+                      [disabled]="!addLabelInput.value?.trim().length"
+                    >
+                      <nb-icon icon="plus-outline"></nb-icon>
+                    </button>
+                  </nb-form-field>
+
+                  <button
+                    nbButton
+                    ghost
+                    (click)="deletePredefinedValue(predefinedValue.value)"
+                    status="danger"
+                    nbTooltip="Delete predefined value"
+                  >
+                    <nb-icon icon="trash-2-outline"></nb-icon>
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="d-flex gap-1 align-items-center w-100 mt-4">
+            <span class="text-nowrap">Add new predefined value</span>
+
+            <nb-form-field class="w-100">
+              <input
+                nbInput
+                fullWidth
+                placeholder="New predefined value"
+                #predefValueAdd
+                (keyup.enter)="createPredefinedValue(predefValueAdd.value); predefValueAdd.value = ''"
+                fieldSize="small"
+              />
+
+              <button
+                nbButton
+                ghost
+                nbSuffix
+                type="button"
+                (click)="createPredefinedValue(predefValueAdd.value)"
+                [disabled]="!predefValueAdd.value?.trim().length"
+              >
+                <nb-icon
+                  nbSuffix
+                  icon="plus-outline"
+                ></nb-icon>
+              </button>
+            </nb-form-field>
+          </div>
+        </div>
+      </nb-card-body>
+    </nb-card>
   </nb-card-body>
 </nb-card>
+
 <p></p>
+
 <nb-card class="entities">
   <nb-card-header>Entity roles</nb-card-header>
   <nb-card-body>
-    <tock-entity-details
+    <div
+      *ngIf="!(state.entities | async)?.length"
+      class="text-muted font-italic"
+    >
+      No entity role defined
+    </div>
+
+    <div
+      class="mb-3"
       *ngFor="let e of state.entities | async"
-      [entity]="e"
-    ></tock-entity-details>
+    >
+      <tock-entity-details [entity]="e"></tock-entity-details>
+    </div>
   </nb-card-body>
 </nb-card>
