Model quality views refacto

--- a/nlp/admin/web/src/app/applications/user/user-logs.component.html
+++ b/nlp/admin/web/src/app/applications/user/user-logs.component.html
@@ -27,7 +27,7 @@
   <nb-card-body>
     <table
       *ngIf="dataSource && dataSource.length !== 0"
-      class="table table-sm table-fixed"
+      class="table table-sm"
     >
       <thead>
         <tr>
