--- a/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
@@ -62,7 +62,7 @@
       </div>
       <table
         *ngIf="dataSource.length !== 0"
-        class="table table-sm table-fixed"
+        class="table table-sm"
       >
         <thead>
           <tr>
