--- a/bot/admin/web/src/app/theme/styles/utilities.scss
+++ b/bot/admin/web/src/app/theme/styles/utilities.scss
@@ -1,5 +1,13 @@
 @import '@nebular/theme/styles/theming';
 
+@mixin truncate($line) {
+  -webkit-line-clamp: $line;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @for $i from 1 through 4 {
   .gap-#{$i} {
     gap: #{$i}rem;
@@ -8,6 +16,14 @@
 
 .lineHeight-0 {
   line-height: 0;
+}
+
+.lineHeight-1 {
+  line-height: 1rem;
+}
+
+.font-size-small {
+  font-size: 0.875em;
 }
 
 .nb-theme-default .text-mitigated {
@@ -46,6 +62,10 @@
 
 nb-select.appearance-outline .select-button {
   min-width: auto !important;
+}
+
+nb-route-tabset .tab-link {
+  padding-top: 0;
 }
 
 // Makes the disabled ghost button more discreet. By default, the background color makes it more visible than the non-deactivated buttons.
