--- a/nlp/admin/web/src/app/test-nlp/test-entity-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-entity-error.component.html
@@ -60,7 +60,7 @@
       </div>
       <table
         *ngIf="dataSource.length !== 0"
-        class="table table-sm table-fixed"
+        class="table table-sm"
       >
         <thead>
           <tr>
