[DERCBOT-842] Switch to builtin story. Use storyId instead of mongo Id (#301)

--- a/bot/admin/web/src/app/rag/rag-settings/rag-settings.component.html
+++ b/bot/admin/web/src/app/rag/rag-settings/rag-settings.component.html
@@ -240,7 +240,7 @@
       >
         <nb-option
           *ngFor="let option of filteredStories$ | async"
-          [value]="option._id"
+          [value]="option.storyId"
         >
           {{ option.name }}
         </nb-option>
