Intents log refacto

--- a/bot/admin/web/src/app/analytics/analytics-tabs.component.html
+++ b/bot/admin/web/src/app/analytics/analytics-tabs.component.html
@@ -13,4 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<nb-route-tabset [tabs]="analyticsTabLinks"></nb-route-tabset>
+<nb-route-tabset
+  [tabs]="analyticsTabLinks"
+  fullWidth
+></nb-route-tabset>
