--- a/bot/admin/web/src/app/bot/bot-tabs.component.html
+++ b/bot/admin/web/src/app/bot/bot-tabs.component.html
@@ -14,4 +14,7 @@
   ~ limitations under the License.
   -->
 
-<nb-route-tabset [tabs]="botTabLinks"></nb-route-tabset>
+<nb-route-tabset
+  [tabs]="botTabLinks"
+  fullWidth
+></nb-route-tabset>
