--- a/bot/admin/web/src/app/language-understanding/language-understanding-tabs/language-understanding-tabs.component.html
+++ b/bot/admin/web/src/app/language-understanding/language-understanding-tabs/language-understanding-tabs.component.html
@@ -13,4 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<nb-route-tabset [tabs]="tabLinks"></nb-route-tabset>
+<nb-route-tabset
+  [tabs]="tabLinks"
+  fullWidth
+></nb-route-tabset>
