--- a/bot/admin/web/src/app/shared/components/sentence-training/sentence-training.component.html
+++ b/bot/admin/web/src/app/shared/components/sentence-training/sentence-training.component.html
@@ -39,100 +39,98 @@
         message="To add Sentences, start from New Sentence or Test the Bot in Tock Studio, or talk to the bot on any connected channel."
       ></tock-no-data-found>
 
-      <div
-        class="grid-columns-header sticky"
-        [ngClass]="{ scrolled: scrolled }"
-        *ngIf="!loading && sentences?.length"
-      >
-        <div class="d-flex gap-1 align-items-center">
-          <nb-checkbox
-            class="lineHeight-0"
-            [checked]="selection?.selected?.length === sentences?.length"
-            [indeterminate]="selection?.selected?.length && selection.selected.length < sentences?.length"
-            (checkedChange)="handleToggleSelectAll($event)"
-          ></nb-checkbox>
-          <div
-            *ngIf="selection.selected.length"
-            class="d-flex gap-1"
-            data-testid="batch-action"
-          >
-            <button
-              nbButton
-              nbTooltip="Validate all selected sentences"
-              status="success"
-              ghost
-              shape="round"
-              (click)="handleBatchAction(Action.VALIDATE)"
-              data-testid="batch-action-validate"
+      <tock-sticky-menu *ngIf="!loading && sentences?.length">
+        <div class="grid-columns-header">
+          <div class="d-flex gap-1 align-items-center">
+            <nb-checkbox
+              class="lineHeight-0"
+              [checked]="selection?.selected?.length === sentences?.length"
+              [indeterminate]="selection?.selected?.length && selection.selected.length < sentences?.length"
+              (checkedChange)="handleToggleSelectAll($event)"
+            ></nb-checkbox>
+            <div
+              *ngIf="selection.selected.length"
+              class="d-flex gap-1"
+              data-testid="batch-action"
             >
-              <nb-icon icon="checkmark-circle-2"></nb-icon>
-            </button>
-            <button
-              *ngIf="sentenceTrainingMode !== SentenceTrainingMode.UNKNOWN"
-              nbButton
-              nbTooltip="Set all selected sentences as unknown"
-              status="warning"
-              ghost
-              shape="round"
-              (click)="handleBatchAction(Action.UNKNOWN)"
-              data-testid="batch-action-unknown"
+              <button
+                nbButton
+                nbTooltip="Validate all selected sentences"
+                status="success"
+                ghost
+                shape="round"
+                (click)="handleBatchAction(Action.VALIDATE)"
+                data-testid="batch-action-validate"
+              >
+                <nb-icon icon="checkmark-circle-2"></nb-icon>
+              </button>
+              <button
+                *ngIf="sentenceTrainingMode !== SentenceTrainingMode.UNKNOWN"
+                nbButton
+                nbTooltip="Set all selected sentences as unknown"
+                status="warning"
+                ghost
+                shape="round"
+                (click)="handleBatchAction(Action.UNKNOWN)"
+                data-testid="batch-action-unknown"
+              >
+                <nb-icon icon="question-mark-circle-outline"></nb-icon>
+              </button>
+              <!-- <button
+                *ngIf="sentenceTrainingMode !== SentenceTrainingMode.RAGEXCLUDED"
+                nbButton
+                nbTooltip="Set all selected sentences as ragexcluded"
+                status="warning"
+                ghost
+                shape="round"
+                (click)="handleBatchAction(Action.RAGEXCLUDED)"
+                data-testid="batch-action-ragexcluded"
+              >
+                <nb-icon
+                  icon="ragexclude"
+                  pack="tock-custom"
+                ></nb-icon>
+              </button> -->
+              <button
+                nbButton
+                nbTooltip="Delete all selected sentences"
+                status="danger"
+                ghost
+                shape="round"
+                (click)="handleBatchAction(Action.DELETE)"
+                data-testid="batch-action-delete"
+              >
+                <nb-icon icon="trash-2-outline"></nb-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-between align-items-center flex-wrap gap-1">
+            <span
+              class="pointer"
+              (click)="toggleSort()"
+              data-testid="sort"
             >
-              <nb-icon icon="question-mark-circle-outline"></nb-icon>
-            </button>
-            <!-- <button
-              *ngIf="sentenceTrainingMode !== SentenceTrainingMode.RAGEXCLUDED"
-              nbButton
-              nbTooltip="Set all selected sentences as ragexcluded"
-              status="warning"
-              ghost
-              shape="round"
-              (click)="handleBatchAction(Action.RAGEXCLUDED)"
-              data-testid="batch-action-ragexcluded"
-            >
+              Sort by creation date
               <nb-icon
-                icon="ragexclude"
-                pack="tock-custom"
+                *ngIf="!isSorted"
+                icon="chevron-down-outline"
+                class="valign-middle"
               ></nb-icon>
-            </button> -->
-            <button
-              nbButton
-              nbTooltip="Delete all selected sentences"
-              status="danger"
-              ghost
-              shape="round"
-              (click)="handleBatchAction(Action.DELETE)"
-              data-testid="batch-action-delete"
-            >
-              <nb-icon icon="trash-2-outline"></nb-icon>
-            </button>
+              <nb-icon
+                *ngIf="isSorted"
+                icon="chevron-up-outline"
+                class="valign-middle"
+              ></nb-icon>
+            </span>
+
+            <tock-pagination
+              [pagination]="pagination"
+              (onPaginationChange)="paginationChange()"
+            ></tock-pagination>
           </div>
         </div>
-
-        <div class="d-flex justify-content-between align-items-center flex-wrap gap-1">
-          <span
-            class="pointer"
-            (click)="toggleSort()"
-            data-testid="sort"
-          >
-            Sort by creation date
-            <nb-icon
-              *ngIf="!isSorted"
-              icon="chevron-down-outline"
-              class="valign-middle"
-            ></nb-icon>
-            <nb-icon
-              *ngIf="isSorted"
-              icon="chevron-up-outline"
-              class="valign-middle"
-            ></nb-icon>
-          </span>
-
-          <tock-pagination
-            [pagination]="pagination"
-            (onPaginationChange)="paginationChange()"
-          ></tock-pagination>
-        </div>
-      </div>
+      </tock-sticky-menu>
 
       <tock-sentence-training-entry
         *ngFor="let sentence of sentences; trackBy: trackBySentence"
