--- a/bot/admin/web/src/app/bot/story/create-story/create-story.component.html
+++ b/bot/admin/web/src/app/bot/story/create-story/create-story.component.html
@@ -14,7 +14,9 @@
   ~ limitations under the License.
   -->
 
-<nb-card class="sentence">
+<h1 class="mt-3">New story</h1>
+
+<nb-card class="sentence mt-2">
   <nb-card-body>
     <tock-select-bot
       [(configurationId)]="botConfigurationId"
