--- a/bot/admin/web/src/app/bot/story/documents-story.component.html
+++ b/bot/admin/web/src/app/bot/story/documents-story.component.html
@@ -1,6 +1,8 @@
+<h1 class="mt-3">Documents</h1>
+
 <nb-card
   *ngIf="fileList"
-  class="mt-3"
+  class="mt-2"
 >
   <nb-card-body>
     <div class="table-list table-list-header">
