--- a/bot/admin/web/src/app/theme/styles/styles.scss
+++ b/bot/admin/web/src/app/theme/styles/styles.scss
@@ -30,6 +30,8 @@ $cyan: #0095ff;
 $yellow: #ffaa00;
 $red: #ff3d71;
 
+$grid-gutter-width: 15px;
+
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/mixins';
 @import 'bootstrap/scss/root';
