--- a/bot/admin/web/src/app/bot/feature/feature.component.html
+++ b/bot/admin/web/src/app/bot/feature/feature.component.html
@@ -14,6 +14,8 @@
   ~ limitations under the License.
   -->
 
+<h1 class="mt-3">Rules</h1>
+
 <tock-story-runtime-settings></tock-story-runtime-settings>
 <tock-story-rule></tock-story-rule>
 <tock-application-feature></tock-application-feature>
