--- a/bot/admin/web/src/app/bot/i18n/i18n.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.html
@@ -13,196 +13,85 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<nb-card class="responses mb-2">
-  <nb-card-body>
-    <div class="background">
-      <nb-form-field class="i18n-select">
-        <nb-icon
-          nbPrefix
-          icon="search"
-          pack="eva"
-        ></nb-icon>
-        <input
-          nbInput
-          shape="round"
-          type="text"
-          status="primary"
-          placeholder="Search"
-          [(ngModel)]="filterString"
-          (keyup)="filter($event.target.value)"
-        />
-      </nb-form-field>
-      <span class="i18n-select nb-form-field-infix">
-        <nb-select
-          placeholder="Filter by locale"
-          [(ngModel)]="filterLocale"
-          class="nb-select"
-          status="primary"
-          (selectedChange)="filterChanged()"
-        >
-          <nb-option
-            value=""
-            title="All locales, including not supported by application"
-            >All</nb-option
-          >
-          <nb-option
-            value="current"
-            title="Only current locale"
-            >Current locale</nb-option
-          >
-          <nb-option
-            value="supported"
-            title="Only locales, currently supported by application"
-            >Supported locales</nb-option
-          >
-          <nb-option
-            value="not_supported"
-            title="Only locales, not supported by application"
-            >Not supported locales</nb-option
-          >
-        </nb-select>
-        <span class="nb-form-field-label-wrapper">
-          <label class="label-title">Filter by locale</label>
-        </span>
-      </span>
-      <span class="i18n-select nb-form-field-infix">
-        <nb-select
-          placeholder="Filter by category"
-          [(ngModel)]="selectedCategory"
-          class="nb-select"
-          status="primary"
-          (selectedChange)="filterChanged()"
-        >
-          <nb-option
-            *ngFor="let c of allCategories"
-            [value]="c"
-            >{{ c }}</nb-option
-          >
-        </nb-select>
-        <span class="nb-form-field-label-wrapper">
-          <label class="label-title">Filter by category</label>
-        </span>
-      </span>
-      <span class="i18n-select nb-form-field-infix">
-        <nb-select
-          placeholder="Filter by state"
-          [(ngModel)]="filterOption"
-          class="nb-select"
-          status="primary"
-          (selectedChange)="filterChanged()"
-        >
-          <nb-option value="">All</nb-option>
-          <nb-option value="not_validated">Only not validated</nb-option>
-          <nb-option value="validated">Only validated</nb-option>
-        </nb-select>
-        <span class="nb-form-field-label-wrapper">
-          <label class="label-title">Filter by state</label>
-        </span>
-      </span>
-      <span class="i18n-select nb-form-field-infix">
-        <nb-select
-          placeholder="Not used since"
-          [(ngModel)]="notUsedFrom"
-          class="nb-select"
-          status="primary"
-          (selectedChange)="filterChanged()"
-        >
-          <nb-select-label>
-            {{ notUsedFromLabel(notUsedFrom) }}
-          </nb-select-label>
-          <nb-option
-            *ngFor="let notUsedFromValue of notUsedFromPossibleValues"
-            [value]="notUsedFromValue"
-            >{{ notUsedFromLabel(notUsedFromValue) }}</nb-option
-          >
-        </nb-select>
-        <span class="nb-form-field-label-wrapper">
-          <label class="label-title">Filter by usage</label>
-        </span>
-      </span>
-    </div>
-  </nb-card-body>
-  <nb-card-footer>
-    <nb-actions
-      size="small"
-      style="cursor: pointer"
-      fullWidth
-    >
-      <nb-action
-        class="control-item"
-        nbTooltip="Reload all"
-        (click)="refresh()"
-      >
-        <nb-icon icon="refresh-outline"></nb-icon>
-        <span class="i18-action-label">Reload</span>
-      </nb-action>
-      <nb-action
-        class="control-item"
-        nbTooltip="Validate all existing labels"
-        (click)="validateAll()"
-      >
-        <nb-icon icon="checkmark-outline"></nb-icon>
-        <span class="i18-action-label">Validate All</span>
-      </nb-action>
-      <nb-action
-        *ngIf="state.currentApplication.supportedLocales.length !== 1"
-        class="control-item"
-        nbTooltip="Translate all missing labels"
-        (click)="complete()"
-      >
-        <nb-icon icon="globe-outline"></nb-icon>
-        <span class="i18-action-label">Translate All</span>
-      </nb-action>
-      <nb-action
-        class="control-item"
-        nbTooltip="Import"
-        (click)="openImportWindow()"
-      >
-        <nb-icon icon="upload-outline"></nb-icon>
-        <span class="i18-action-label">Import</span>
-      </nb-action>
-      <nb-action
-        class="control-item"
-        nbTooltip="Export"
-        (click)="openExportWindow()"
-      >
-        <nb-icon icon="download-outline"></nb-icon>
-        <span class="i18-action-label">Export</span>
-      </nb-action>
-    </nb-actions>
-  </nb-card-footer>
-</nb-card>
 
-<div
-  class="d-flex justify-content-between mb-1"
-  [nbSpinner]="loading"
->
-  &nbsp;
-  <tock-pagination
-    [pagination]="pagination"
-    (onPaginationChange)="paginationChange()"
-  ></tock-pagination>
+<div class="d-flex flex-wrap mt-3">
+  <h1 class="flex-grow-1">Answers</h1>
+
+  <section class="d-flex flex-wrap align-items-center">
+    <button
+      nbButton
+      ghost
+      shape="round"
+      nbTooltip="Refresh answers"
+      (click)="refresh()"
+      class="ml-2"
+    >
+      <nb-icon icon="refresh-outline"></nb-icon>
+    </button>
+  </section>
 </div>
 
-<div
-  *ngFor="let i of pagedItems()"
-  [nbSpinner]="loading"
-  nbSpinnerStatus="primary"
+<tock-i18n-filters
+  class="d-block mb-1"
+  [categories]="allCategories"
+  (onSearch)="onSearch($event)"
+  (onValidateAll)="onValidateAll()"
+  (onTranslate)="onTranslate()"
+  (onImport)="onImport()"
+  (onExport)="onExport()"
+></tock-i18n-filters>
+
+<tock-no-data-found
+  *ngIf="!loading && !i18n.length"
+  title="No Answer found"
+></tock-no-data-found>
+
+<tock-no-data-found
+  *ngIf="!loading && i18n.length && !filteredI18n.length"
+  title="No answer matches your search criteria"
+></tock-no-data-found>
+
+<tock-sticky-menu
+  offset="300"
+  *ngIf="!loading && filteredI18n.length"
 >
-  <tock-i18n-label
-    [i]="i"
-    [i18nController]="controller()"
-    [intent]="i.category"
-    [localeBase]="localeBase"
-    [locales]="locales"
-    [deleteLabelAllowed]="isDeleteLabelAllowed()"
-  >
-  </tock-i18n-label>
+  <div class="d-flex justify-content-between align-items-center">
+    <div>
+      <nb-checkbox
+        class="ml-2"
+        [(ngModel)]="showEmptyLabels"
+        status="info"
+        nbTooltip="Show labels not filled in."
+        >Display empty labels</nb-checkbox
+      >
+    </div>
+    <tock-pagination
+      [pagination]="pagination"
+      (onPaginationChange)="paginationChange()"
+    ></tock-pagination>
+  </div>
+</tock-sticky-menu>
+
+<div
+  [nbSpinner]="loading"
+  class="mt-1"
+>
+  <ng-container *ngIf="!loading">
+    <tock-i18n-label
+      *ngFor="let i18nLabel of pagedItems()"
+      [i18nLabel]="i18nLabel"
+      [deleteLabelAllowed]="isDeleteLabelAllowed()"
+      (labelDeleted)="labelDeleted($event)"
+      (fillLabels)="fillMissingLabels()"
+      [showEmptyLabels]="showEmptyLabels"
+    >
+    </tock-i18n-label>
+  </ng-container>
 </div>
 
 <div
   class="d-flex justify-content-between"
-  [nbSpinner]="loading"
+  *ngIf="!loading && filteredI18n.length"
 >
   &nbsp;
   <tock-pagination
@@ -210,3 +99,5 @@
     (onPaginationChange)="paginationChange()"
   ></tock-pagination>
 </div>
+
+<tock-scroll-top-button></tock-scroll-top-button>
