Img display styling

--- a/bot/admin/web/src/app/bot/story/documents-story/documents-story.component.html
+++ b/bot/admin/web/src/app/bot/story/documents-story/documents-story.component.html
@@ -143,7 +143,7 @@
         >
           <div *ngIf="file.isImage()">
             <img
-              class="img-fluid image mt-1"
+              class="img-fluid img-thumbnail image rounded"
               src="{{ file.url(rest.url) }}"
             />
           </div>
