--- a/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-attachment/chat-ui-message-attachment.component.html
+++ b/bot/admin/web/src/app/shared/components/chat-ui/chat-ui-message/chat-ui-message-attachment/chat-ui-message-attachment.component.html
@@ -6,7 +6,7 @@
   <img
     *ngIf="attachment.isImage()"
     [src]="localUrl()"
-    class="img-fluid image"
+    class="img-fluid img-thumbnail rounded image"
   />
   <div *ngIf="!attachment.isImage()">(file)</div>
 </a>
